feat(backend): remove deprecated rest routes
