# backend/src/routes/notification.rs
@@ -42,53 +42,27 @@ pub struct NotificationKeys {
     pub auth: String,
 }
 
-#[utoipa::path(post,
-    path = "/notification/save-subscription",
-    request_body(
-        content = NotificationSubscription,
-        description = "The notfication subscription generated by the browser"
-    ),
-    responses(
-        (status = 200, description = "Notification sent successfully"),
-    ),
-)]
-#[deprecated = "Use the graphql handler instead"]
-pub async fn save_notification_subscription_handler(
-    _notification_handler: Json<NotificationSubscription>,
-) {
-    // let db = DB::<MonthlyBudget>::new("users")
-    //     .await
-    //     .context("Failed to connect to DB")?;
-    // let filter = doc! {
-    //     "user":
-    // };
-    // let result = db.collection.replace_one()
-}
-
-/// Send a notification
-#[utoipa::path(
-    post,
-    path = "/notification/send",
-    request_body(
-        content = NotificationSendBody, content_type = "application/json",
-    ),
-    responses(
-        (status = 200, description = "Notification sent successfully"),
-    ),
-)]
-pub async fn send_notification_handler(body: Json<NotificationSendBody>) -> Result<(), AppError> {
-    let endpoint = &body.subscription.endpoint;
-    let p256dh = &body.subscription.keys.p256dh;
-    let auth = &body.subscription.keys.auth;
-
-    let subscription_info = SubscriptionInfo::new(endpoint, p256dh, auth);
+/// Sends a web push notification
+///
+/// * `subscription`: configures the destination of the notification
+/// * `notification`: the content of the notification
+pub async fn send_web_push_notification(
+    subscription: NotificationSubscription,
+    notification: NotificationBody,
+) -> Result<()> {
+    let subscription_info = SubscriptionInfo::new(
+        subscription.endpoint,
+        subscription.keys.p256dh,
+        subscription.keys.auth,
+    );
     let sig_builder =
         VapidSignatureBuilder::from_base64(&Config::load().vapid_private_key, &subscription_info)?
             .build()?;
 
     // Now add payload and encrypt.
     let mut builder = WebPushMessageBuilder::new(&subscription_info);
-    let content = simd_json::to_vec(&body.body).context("Inproper formatted notification body")?;
+    let content =
+        simd_json::to_vec(&notification).context("Inproper formatted notification body")?;
     builder.set_payload(ContentEncoding::Aes128Gcm, &content);
     builder.set_vapid_signature(sig_builder);
 
@@ -96,6 +70,10 @@ pub async fn send_notification_handler(body: Json<NotificationSendBody>) -> Resu
 
     // Finally, send the notification!
     let built = builder.build()?;
-    client.send(built).await?;
+    client
+        .send(built)
+        .await
+        .context("Failed to send web push notification")?;
+
     Ok(())
 }
